--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,24 +1,14 @@
-h2
-  | Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    br
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      em
-        | (
-        = @minimum_password_length
-        |  characters minimum)
-    br
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    br
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.row.justify-content-xl-center.mb-3
+  .col-xl-4.mb-3
+    h1.mb-0 Sign up
+    p.mb-3
+      ' or
+      = link_to 'log in', new_user_session_path
+
+    .list-group.report.mb-1
+      .list-group-item.report-title
+        = simple_form_for resource, as: resource_name, url: registration_path(resource_name) do |form|
+          = form.input :email, placeholder: 'e.g., john.doe@example.com'
+          = form.input :password, as: :password, placeholder: 'e.g., **********'
+          = form.input :password_confirmation, as: :password, placeholder: 'Repeat your password'
+          = form.submit 'Sign up', class: 'btn btn-primary'
