--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -5,10 +5,16 @@
       ' or
       = link_to 'log in', new_user_session_path
 
-    .list-group.report.mb-1
+    .list-group.report.mb-3
       .list-group-item.report-title
         = simple_form_for resource, as: resource_name, url: registration_path(resource_name) do |form|
           = form.input :email, placeholder: 'e.g., john.doe@example.com'
           = form.input :password, as: :password, placeholder: 'e.g., **********'
           = form.input :password_confirmation, as: :password, placeholder: 'Repeat your password'
-          = form.submit 'Sign up', class: 'btn btn-primary'
+          = form.submit 'Sign up', class: 'btn btn-primary btn-block'
+
+    .text-center.mb-3 or
+
+    = link_to user_google_oauth2_omniauth_authorize_path, class: 'btn btn-google btn-lg btn-block' do
+      = icon 'fab', 'google', class: 'mr-2'
+      span Sign up with Google
