Add first name and last name to the user model and populate them

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -9,6 +9,8 @@
       .list-group-item.report-title
         = simple_form_for resource, as: resource_name, url: registration_path(resource_name) do |form|
           = form.input :email, placeholder: 'e.g., john.doe@example.com'
+          = form.input :first_name, label: 'Name', placeholder: 'e.g., John'
+          = form.input :last_name, label: 'Surname', placeholder: 'e.g., Doe'
           = form.input :password, as: :password, placeholder: 'e.g., **********'
           = form.input :password_confirmation, as: :password, placeholder: 'Repeat your password'
           = form.submit 'Sign up', class: 'btn btn-primary btn-block'
