--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -24,7 +24,7 @@ html
         ul.navbar-nav.ml-auto
           - if user_signed_in?
             li.nav-item
-              = link_to current_user.email, '#', class: 'nav-link'
+              = link_to current_user.full_name, '#', class: 'nav-link'
             li.nav-item
               = link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link'
 
