--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,9 @@ html
         - if user_signed_in?
           ul.navbar-nav.mr-auto
             li.nav-item
-              = link_to 'Calendar', calendar_path, class: 'nav-link'
+              = link_to 'My reports', calendar_path, class: 'nav-link'
+            li.nav-item
+              = link_to 'Teams', teams_path, class: 'nav-link'
 
 
         ul.navbar-nav.ml-auto
