--- a/app/views/teams/index.html.slim
+++ b/app/views/teams/index.html.slim
@@ -8,19 +8,30 @@
               .card-body
                 h5.card-title = team.name
                 - team.members.each do |member|
-                  .avatar title="#{member.full_name}" data-toggle="tooltip" data-placement="top" = member.initials
+                  .avatar.js-tooltip title="#{member.full_name}" data-placement="top"
+                    span = member.initials
+                    - if team.administrated_by?(member)
+                      = icon 'fas', 'crown', class: 'crown'
 
-                / = link_to '#', class: 'avatar avatar-new', title: 'Invite to team', data: {toggle: 'tooltip', placement: 'top'} do
-                /   = icon 'fas', 'plus'
+                .popup.js-popup
+                  = link_to '#', class: 'avatar avatar-new js-popup-trigger' do
+                    = icon 'fas', 'user-plus'
 
-                / div
-                /   = simple_form_for [team, @invite], url: team_invites_path(team) do |form|
-                /     = form.input :email
+                  .js-popup-content.popup-content
+                    .popup-title
+                      h3 Invite to team
+                      = link_to '#', class: 'popup-close-btn js-popup-close' do
+                        = icon 'fas', 'times'
+
+                    .popup-body
+                      = link_to 'Generate invitation link', '#', class: 'btn btn-primary btn-block'
 
                 div.mt-3
                   = link_to "Today's reports", team_morning_reports_path(team), class: 'btn btn-outline-secondary'
-                  =< link_to team_path(team), method: :delete, title: 'Delete', data: {toggle: 'tooltip', placement: 'top'}, class: 'btn btn-outline-danger' do
-                    = icon 'far', 'trash-alt'
+
+                  - if team.administrated_by? current_user
+                    =< link_to team_path(team), method: :delete, title: 'Delete', data: {placement: 'top'}, class: 'btn btn-outline-danger js-tooltip' do
+                      = icon 'far', 'trash-alt'
 
       - else
         .col
