--- a/app/views/teams/new.html.slim
+++ b/app/views/teams/new.html.slim
@@ -1,6 +1,10 @@
-h1 New team
+.row.justify-content-xl-center.mb-3
+  .col-xl-6
+    h1 New team
 
-= simple_form_for @team do |form|
-  = form.input :name
-  = form.submit class: 'btn btn-primary'
-  =< link_to 'Cancel', teams_path, class: 'btn btn-outline-secondary'
+    .card
+      .card-body
+        = simple_form_for @team do |form|
+          = form.input :name
+          = form.submit class: 'btn btn-primary'
+          =< link_to 'Cancel', teams_path, class: 'btn btn-outline-secondary'
