--- a/app/assets/stylesheets/modules/_calendar.scss
+++ b/app/assets/stylesheets/modules/_calendar.scss
@@ -99,6 +99,7 @@
       width: 30px;
       height: 30px;
       line-height: 30px;
+      font-size: 16px;
       border-radius: 15px;
       margin-left: -15px;
       margin-top: 0;
