--- a/app/assets/stylesheets/bootstrap_overwrites.scss
+++ b/app/assets/stylesheets/bootstrap_overwrites.scss
@@ -2,3 +2,11 @@
   color: #dc3545;
   text-decoration: none;
 }
+
+.table {
+  td { vertical-align: middle; }
+}
+
+.table.table-no-border-top > tbody > tr:first-child > td {
+  border-top: none;
+}
