--- a/app/assets/stylesheets/modules/_popup.scss
+++ b/app/assets/stylesheets/modules/_popup.scss
@@ -7,8 +7,9 @@
   display: none;
   z-index: 1;
   position: absolute;
-  top: 0;
-  left: 0;
+  bottom: -1rem;
+  left: 50%;
+  transform: translate(-50%, 0);
   min-width: 20rem;
   max-width: 90%;
   background-color: #FFFFFF;
