--- a/app/views/teams/new.html.slim
+++ b/app/views/teams/new.html.slim
@@ -1,10 +1,16 @@
-.row.justify-content-xl-center.mb-3
-  .col-xl-6
-    h1 New team
+h1.mb-3 Teams
 
-    .card
-      .card-body
-        = simple_form_for @team do |form|
-          = form.input :name
-          = form.submit class: 'btn btn-primary'
-          =< link_to 'Cancel', teams_path, class: 'btn btn-outline-secondary'
+ul.nav.nav-tabs.mb-3
+  - @teams.each do |team|
+    li.nav-item
+      = link_to team.name, team_path(team), class: 'nav-link'
+
+  li.nav-item
+    = link_to new_team_path, class: 'nav-link active js-tooltip', title: 'Create new team' do
+      = icon 'fas', 'plus'
+
+.card
+  .card-body
+    = simple_form_for @team do |form|
+      = form.input :name
+      = form.submit class: 'btn btn-primary'
