--- a/app/views/teams/new.html.slim
+++ b/app/views/teams/new.html.slim
@@ -1,13 +1,6 @@
 h1.mb-3 Teams
 
-ul.nav.nav-tabs.mb-3
-  - @teams.each do |team|
-    li.nav-item
-      = link_to team.name, team_path(team), class: 'nav-link'
-
-  li.nav-item
-    = link_to new_team_path, class: 'nav-link active js-tooltip', title: 'Create new team' do
-      = icon 'fas', 'plus'
+= render 'tabs', teams: @teams, tab: :new
 
 .card
   .card-body
