--- a/app/views/teams/new.html.slim
+++ b/app/views/teams/new.html.slim
@@ -1,6 +1,10 @@
-h1.mb-3 Teams
+- if @teams.any?
+  h1.mb-3 Teams
+  = render 'tabs', teams: @teams, tab: :new
 
-= render 'tabs', teams: @teams, tab: :new
+- else
+  h1.mb-3 New team
+  .alert.alert-info You are not part of a team. In order to share reports with others you must belong to one. Create a team or get invited.
 
 .card
   .card-body
