--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,14 +19,12 @@ html
         - if user_signed_in?
           ul.navbar-nav.mr-auto
             li.nav-item
-              = link_to 'Teams', teams_path, class: 'nav-link'
-          /   li.nav-item
-          /     = link_to 'Calendar', calendar_path, class: 'nav-link'
+              = link_to 'People', employees_path, class: 'nav-link'
 
         ul.navbar-nav.ml-auto
           - if user_signed_in?
             li.nav-item
-              = link_to current_user.full_name, '#', class: 'nav-link'
+              span.nav-link = current_user.full_name
             li.nav-item
               = link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'nav-link'
 
