--- a/app/assets/stylesheets/modules/_users-table.scss
+++ b/app/assets/stylesheets/modules/_users-table.scss
@@ -17,6 +17,14 @@
   text-align: left;
 }
 
+.users-table-subscription-col {
+  text-align: right;
+  width:1%;
+  white-space:nowrap;
+}
+
 .users-table-actions-col {
   text-align: right;
+  width:1%;
+  white-space:nowrap;
 }
