Create post desing

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,10 @@ html
         - if user_signed_in?
           ul.navbar-nav.mr-auto
             li.nav-item
+              = link_to 'Feed', feeds_path, class: 'nav-link'
+            li.nav-item
               = link_to 'People', employees_path, class: 'nav-link'
+
 
         ul.navbar-nav.ml-auto
           - if user_signed_in?
