--- a/app/assets/stylesheets/bootstrap_overwrites.scss
+++ b/app/assets/stylesheets/bootstrap_overwrites.scss
@@ -3,6 +3,10 @@
   text-decoration: none;
 }
 
+.form-control {
+  &::placeholder { color: #ccc; }
+}
+
 .table {
   td { vertical-align: middle; }
 }
