--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,7 +19,7 @@ html
         - if user_signed_in?
           ul.navbar-nav.mr-auto
             li.nav-item
-              = link_to 'Feed', feeds_path, class: 'nav-link'
+              = link_to 'Feed', reports_path, class: 'nav-link'
             li.nav-item
               = link_to 'People', employees_path, class: 'nav-link'
 
@@ -40,3 +40,7 @@ html
 
     .container-fluid
       = yield
+
+    .button-dialog-content.js-button-dialog-content
+      .content.js-content
+      .arrow.js-arrow
