--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -5,8 +5,8 @@
       ' or
       = link_to 'log in', new_user_session_path
 
-    .list-group.report.mb-3
-      .list-group-item.report-title
+    .list-group.mb-3
+      .list-group-item
         = simple_form_for resource, as: resource_name, url: registration_path(resource_name) do |form|
           = form.input :email, placeholder: 'e.g., john.doe@example.com'
           = form.input :first_name, label: 'Name', placeholder: 'e.g., John'
