--- a/app/views/reports/index.html.slim
+++ b/app/views/reports/index.html.slim
@@ -1,7 +1,6 @@
 .row.justify-content-xl-center.mb-3
   .col-xl-6.mb-3
-    .new-report.js-new-report.mb-3 {data-morning-report="#{ReportToJson.execute(MorningReport.new(user: current_user), current_user, edited: true)}"
-                                    data-delivery-report="#{ReportToJson.execute(DeliveryReport.new(user: current_user), current_user, edited: true)}"}
+    .new-report.js-new-report.mb-3 data-morning-report=@morning_report data-delivery-report=@delivery_report
 
     - @reports.each do |report|
       .report.js-report data-report=report
