--- a/app/views/companies/missing.html.slim
+++ b/app/views/companies/missing.html.slim
@@ -2,13 +2,13 @@
   .row.justify-content-xl-center.text-center.mb-3
     .col-xl-7
       h1 Join existing or create a new company
-      p In order to view other people's reports you should be part of a company. Ask to be invited into an existing or create one.
+      p In order to view other people's reports, you should be part of a company. Ask to be invited into an existing or create one.
 
   .row.justify-content-xl-center.text-center.mb-3
     .col-xl-3
       .option
         h3 Get invited to a company
-        p If you know someone who is already using Textstandup and you would like to join his company. Ask for an invite.
+        p If you know someone who is already using Textstandup and you would like to join his company - ask for an invite.
 
     .col-xl-1.or or
 
