--- a/app/views/companies/missing.html.slim
+++ b/app/views/companies/missing.html.slim
@@ -1,18 +1,18 @@
 .missing-company-dialog
-  .row.justify-content-xl-center.text-center.mb-3
-    .col-xl-7
+  .row.justify-content-lg-center.text-center.mb-3
+    .col-lg-7
       h1 Join existing or create a new company
       p In order to view other people's reports, you should be part of a company. Ask to be invited into an existing or create one.
 
-  .row.justify-content-xl-center.text-center.mb-3
-    .col-xl-3
+  .row.justify-content-lg-center.text-center.mb-3
+    .col-lg-3
       .option
-        h3 Get invited to a company
+        h3 Get invited
         p If you know someone who is already using Textstandup and you would like to join his company - ask for an invite.
 
-    .col-xl-1.or or
+    .col-lg-1.or or
 
-    .col-xl-3
+    .col-lg-3
       .option
         h3 Create a company
         p Another option is to create your own company and invite people to it.
