--- a/app/views/companies/new.html.slim
+++ b/app/views/companies/new.html.slim
@@ -1,8 +1,11 @@
-h1.mb-3 New company
-.alert.alert-info You are not part of a company. In order to share reports with others you must belong to one. Create a company or get invited.
+.row.justify-content-lg-center.text-center
+  .col-lg-5
+    h1.mb-3 Create company
 
-ard
-.card-body
-  = simple_form_for @company, url: company_path do |form|
-    = form.input :name
-    = form.submit class: 'btn btn-primary'
+.row.justify-content-lg-center.text-center.mb-3
+  .col-lg-5
+    .card
+      .card-body
+        = simple_form_for @company, url: company_path do |form|
+          = form.input :name, label: false, placeholder: 'What is the name of your company?', input_html: {class: 'form-control-lg', autocomplete: 'off'}
+          = form.submit class: 'btn btn-primary btn-lg', value: 'Create'
