--- a/app/views/companies/new.html.slim
+++ b/app/views/companies/new.html.slim
@@ -1,6 +1,6 @@
 .row.justify-content-lg-center.text-center
   .col-lg-5
-    h1.mb-3 Create company
+    h1.mb-3 Create a company
 
 .row.justify-content-lg-center.text-center.mb-3
   .col-lg-5
