Hide remove button on current user
Current user can "Leave" and not "Remove" itself from a company. This is
basically the same operation. The problem was that both buttons were
visible.

--- a/app/views/employees/index.html.slim
+++ b/app/views/employees/index.html.slim
@@ -44,13 +44,13 @@
                     p You are currently the only admin in the company. If you want to leave you should promote at least one more employee to admin.
                     =< link_to 'Close', '#', class: 'btn btn-outline-secondary js-close'
 
-                - elsif employee == current_user
+                - elsif employee == current_user && @company.administrated_by?(employee) && @company.admins.many?
                   =< render 'shared/button_dialog', button_text: 'Leave', button_class: 'btn-outline-danger', heading: 'Are you sure?' do
                     p Are you sure that you want to leave the company?
                     = link_to 'Yes', employment_path(employee.employment), class: 'btn btn-outline-danger', method: :delete
                     =< link_to 'No', '#', class: 'btn btn-outline-secondary js-close'
 
-                - elsif @company.administrated_by?(current_user)
+                - elsif employee != current_user && @company.administrated_by?(current_user)
                   = render 'shared/button_dialog', button_text: "#{@company.administrated_by?(employee) ? 'Admin' : 'Normal'}", button_class: 'btn-outline-secondary', heading: 'User role' do
                     = link_to 'Admin',
                               employment_path(employee.employment, operation: 'promote'),
@@ -62,10 +62,10 @@
                               method: :patch,
                               class: "btn btn-outline-secondary btn-block #{'disabled' unless @company.administrated_by?(employee)}"
 
-                =< render 'shared/button_dialog', button_text: 'Remove', button_class: 'btn-outline-danger', heading: 'Are you sure?' do
-                  p Are you sure that you want to remove this employee from the company?
-                  = link_to 'Yes', employment_path(employee.employment), class: 'btn btn-outline-danger', method: :delete
-                  =< link_to 'No', '#', class: 'btn btn-outline-secondary js-close'
+                  =< render 'shared/button_dialog', button_text: 'Remove', button_class: 'btn-outline-danger', heading: 'Are you sure?' do
+                    p Are you sure that you want to remove this employee from the company?
+                    = link_to 'Yes', employment_path(employee.employment), class: 'btn btn-outline-danger', method: :delete
+                    =< link_to 'No', '#', class: 'btn btn-outline-secondary js-close'
 
 .row.justify-content-xl-center.mb-3.text-center
   .col-xl-7
