--- a/app/views/employees/index.html.slim
+++ b/app/views/employees/index.html.slim
@@ -2,18 +2,17 @@
   .col-xl-7
     h1 = @company.name
 
-.row.justify-content-xl-center.text-center
-  .col-xl-7
-    - if @company.administrated_by? current_user
-      - if @company.employees.one?
-        .alert.alert-info
-          p You are currently the only employee of this company. Invite more people so you can share updates with someone.
+- if @company.administrated_by?(current_user) && @company.employees.one?
+  .row.justify-content-lg-center.text-center
+    .col-xl-7
+      .alert.alert-info
+        p You are currently the only employee of this company. Invite more people so you can share updates with someone.
 
-          = render 'shared/button_dialog', button_text: 'Invite to company', button_class: 'btn-primary', heading: 'Invite to company' do
-            p Generate an invitation link and send it to a person whom you would like to invite to your company.
-            .js-invitation-link-generator
-              .js-generated-links
-              = link_to 'Generate an invitation link', invitations_path, class: 'btn btn-primary btn-block js-generation-bnt'
+        = render 'shared/button_dialog', button_text: 'Invite to company', button_class: 'btn-primary', heading: 'Invite to company' do
+          p Generate an invitation link and send it to a person whom you would like to invite to your company.
+          .js-invitation-link-generator
+            .js-generated-links
+            = link_to 'Generate an invitation link', invitations_path, class: 'btn btn-primary btn-block js-generation-bnt'
 
 .row.justify-content-xl-center
   .col-xl-7
@@ -32,10 +31,10 @@
                 / Do not show button
 
               - elsif current_user.follows?(employee)
-                = link_to 'Unfollow', subscription_path(current_user.followee_subscription_for(employee)), class: 'btn btn-outline-danger btn-sm', method: :delete
+                = link_to 'Unsubscribe', subscription_path(current_user.followee_subscription_for(employee)), class: 'btn btn-outline-danger btn-sm', method: :delete
 
               - else
-                = link_to 'Follow', subscriptions_path(user_id: employee.id), class: 'btn btn-outline-secondary btn-sm', method: :post
+                = link_to 'Subscribe', subscriptions_path(user_id: employee.id), class: 'btn btn-outline-secondary btn-sm', method: :post
 
             td.users-table-actions-col
               - if @company.employees.many?
