--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -1,6 +1,6 @@
 .row.justify-content-xl-center
   .col-xl-6
-    h1 Profile
+    h1 Company
 
 - if flash[:notice].present?
   .row.justify-content-xl-center
@@ -9,17 +9,8 @@
 
 .row.justify-content-xl-center.mb-5
   .col-xl-6
-    = simple_form_for @user, url: profile_path do |form|
-      .row
-        .col
-          = form.input :first_name, input_html: {autocomplete: 'off'}
-
-        .col
-          = form.input :last_name, input_html: {autocomplete: 'off'}
-
-      .row
-        .col
-          = form.input :time_zone
+    = simple_form_for @company, url: company_path do |form|
+      = form.input :name, input_html: {autocomplete: 'off'}
 
       .row
         .col
@@ -29,10 +20,10 @@
   .col-xl-6
     .card.border-danger
       .card-body.text-danger
-        h5 Account deletion
+        h5 Company deletion
         p If you are not using the application and you would like your data to be deleted, you can do this here. Be aware that the action is immediate and it is not reversible.
 
-        =< render 'shared/button_dialog', button_text: 'Delete account', button_class: 'btn-outline-danger', heading: 'Are you sure?' do
+        =< render 'shared/button_dialog', button_text: 'Delete company', button_class: 'btn-outline-danger', heading: 'Are you sure?' do
           p This is an irrevertable action. Are you sure that you want to continue?
-          = link_to 'Yes', profile_path, class: 'btn btn-outline-danger', method: :delete
+          = link_to 'Yes', company_path, class: 'btn btn-outline-danger', method: :delete
           =< link_to 'No', '#', class: 'btn btn-outline-secondary js-close'
