--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,9 +22,13 @@ html
               = link_to 'Feed', reports_path, class: 'nav-link'
             li.nav-item
               = link_to 'People', employees_path, class: 'nav-link'
-            li.nav-item
-              - if current_user.company && current_user.company.administrated_by?(current_user)
+
+            - if current_user.company && current_user.company.administrated_by?(current_user)
+              li.nav-item
                 = link_to 'Company', company_path, class: 'nav-link'
+
+              li.nav-item
+                = link_to 'Integrations', integrations_path, class: 'nav-link'
 
         ul.navbar-nav.ml-auto
           - if user_signed_in?
