--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -17,7 +17,7 @@
         .col
           = form.input :last_name, input_html: {autocomplete: 'off'}
 
-      - if @user.company.slack_access_token.present?
+      - if @user.company&.slack_access_token.present?
         .row.mb-3
           .col
             = form.label :slack_handle
