--- a/app/views/invitations/show.html.slim
+++ b/app/views/invitations/show.html.slim
@@ -5,13 +5,13 @@
     .card.mb-3
       .card-body
         - if user_signed_in?
-          p.card-text #{@invitation_link.inviting_user.full_name} would like to invite you to join the "#{@invitation_link.company.name}" company.
+          p.card-text #{@invitation_link.inviting_user.full_name} would like you to join the "#{@invitation_link.company.name}" company.
 
           = link_to 'Join company', use_invitation_path(code: @invitation_link.code), method: :patch, class: 'btn btn-primary'
           =< link_to 'Cancel', root_path, class: 'btn btn-outline-secondary'
 
         - else
-          p.card-text #{@invitation_link.inviting_user.full_name} would like to invite you to join the "#{@invitation_link.company.name}" company. To do so you have to sign up or log in to an existing one.
+          p.card-text #{@invitation_link.inviting_user.full_name} would like you to join the "#{@invitation_link.company.name}" company. To do so you have to sign up or log in to an existing one.
 
           = link_to 'Sign up', new_user_registration_path(redirect_to: @current_path), class: 'btn btn-primary'
           =< link_to 'Log in', new_user_session_path(redirect_to: @current_path), class: 'btn btn-outline-secondary'
