--- a/app/assets/stylesheets/modules/_users-table.scss
+++ b/app/assets/stylesheets/modules/_users-table.scss
@@ -17,6 +17,11 @@
   text-align: left;
 }
 
+.users-table-slack-col {
+  color: #666666;
+  font-size: 30px;
+}
+
 .users-table-subscription-col {
   text-align: right;
   width:1%;
