Integrate Google Analytics

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -46,3 +46,5 @@ html
     .button-dialog-content.js-button-dialog-content
       .content.js-content
       .arrow.js-arrow
+
+    = render 'shared/google_analytics' if Settings.google_analytics_enabled
