--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,8 +3,8 @@ doctype html
 html
   head
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    = favicon_link_tag 'favicon-32x32'
-    = favicon_link_tag 'favicon-16x16'
+    = favicon_link_tag 'favicon-32x32.png'
+    = favicon_link_tag 'favicon-16x16.png'
     = stylesheet_link_tag    "application", media: 'all'
     = javascript_include_tag "application"
     = csrf_meta_tags
