Add seo titles and descriptions

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,3 +1,5 @@
+- set_meta_tags title: 'Create a Textstandup account', description: 'Create an account for Textstandup.'
+
 .row.justify-content-xl-center.mb-3
   .col-xl-4.mb-3
     h1.mb-0 Sign up
