--- a/app/views/static_pages/landingpage.html.slim
+++ b/app/views/static_pages/landingpage.html.slim
@@ -1,3 +1,7 @@
+- set_meta_tags title: 'Textstandup: Text based stand-ups',
+                description: 'Efficiently communicate progress with your team mates. Asynchronous. Documented. Focused.',
+                keywords: 'text, standup, stand-up, team, communication'
+
 .jumbo
   nav.navbar.navbar-expand-lg
     = link_to root_path, class: 'navbar-brand' do
