--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,6 +2,7 @@ doctype html
 
 html
   head
+    = display_meta_tags
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     = favicon_link_tag 'favicon-32x32.png'
     = favicon_link_tag 'favicon-16x16.png'
