--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -47,3 +47,4 @@ html
       .arrow.js-arrow
 
     = render 'shared/google_analytics' if Settings.google_analytics_enabled
+    = render 'shared/session_stack' if Settings.session_stack_enabled
