--- a/app/views/layouts/landingpage.html.slim
+++ b/app/views/layouts/landingpage.html.slim
@@ -13,3 +13,4 @@ html
     = yield
 
     = render 'shared/google_analytics' if Settings.google_analytics_enabled
+    = render 'shared/session_stack' if Settings.session_stack_enabled
