--- a/app/views/invitations/show.html.slim
+++ b/app/views/invitations/show.html.slim
@@ -1,3 +1,6 @@
+- set_meta_tags title: "Join \"#{@invitation_link.company.name}\" on Textstandup",
+                description: "#{@invitation_link.inviting_user.full_name} would like you to join the #{@invitation_link.company.name} company."
+
 .row.justify-content-xl-center
   .col-xl-6
     h1.mb-3 Invitation
